Bug 1224974 - fix GTK shaped window drawing. r=bas